<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context="org.pondar.pacmankotlin.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/pointsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/points"
            android:textColor="#F1F1F1"
            android:textSize="24sp" />

        <!-- Notice how the custom view is referenced here with
 a full package path-->

        <TextView
            android:id="@+id/timerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timerView"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

    </LinearLayout>

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </org.pondar.pacmankotlin.GameView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">


        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_left" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/moveUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_up" />

            <Button
                android:id="@+id/moveDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_down" />

        </LinearLayout>

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_right" />
    </LinearLayout>


</LinearLayout>
